Adding non functional requirements and providing a title to the already defined user stories

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -40,6 +40,14 @@
     "- Visualisierung: Die Ergebnisse der Analyse müssen falls vorgegeben mit streamlit visualisiert werden.\n",
     "\n",
     "## Nicht-funktionale Anforderungen:\n",
+    "- Leistung: Das System muss eine stündliche Verarbeitung der bereitgestellten Daten zu Taxifahrten gewährleisten.\n",
+    "- Robustheit: Das System muss auch bei Vorhandensein von großen Datenmengen keine hohen Latenzzeit bezüglich Auslesen und Anzeigen der Datensätze beanspruchen.\n",
+    "- Skalierbarkeit: Das System muss skalierbar sein, damit die Datenbank auch große Datenmengen verarbeiten und anzeigen kann.\n",
+    "- Ausgeglichenheit: Das System muss ein balanciertes Datenverhältnis aufweisen, damit keine auffälligen Ausreißer entstehen, die die Datenanalyse beeinträchtigen könnten.\n",
+    "- Konsistenz: Die Daten im System dürfen nicht von den Verarbeitungsprozessen negativ beeinflusst werden.\n",
+    "- Vollständigkeit und Richtigkeit: Die Daten im System müssen vollständig und korrekt vorhanden sein, damit die Datenbank als vertrauenswürdig klassifiziert werden kann.\n",
+    "\n"
+    "## User Stories: \n",
     "- Als Taxiunternehmen möchte ich die Anzahl der Taxifahrten pro Stunde einsehen können.\n",
     "- Als Taxiunternehmen möchte ich den durchschnittlichen Preis pro Fahrt einsehen können.\n",
     "- Als Taxiunternehmen möchte ich die durchschnittliche Fahrtdauer einsehen können.\n",
