add reason in user stories

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -19,9 +19,15 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "e0c3794a-5ab7-40fb-bea9-22ba3b7ff625",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
    "source": [
     "## Requirements:\n",
     "### Projektumwelt: \n",
@@ -48,13 +54,20 @@
     "- Vollständigkeit und Richtigkeit: Die Daten im System müssen vollständig und korrekt vorhanden sein, damit die Datenbank als vertrauenswürdig klassifiziert werden kann.\n",
     "\n",
     "## User Stories: \n",
-    "- Als Taxiunternehmen möchte ich die Anzahl der Taxifahrten pro Stunde einsehen können.\n",
-    "- Als Taxiunternehmen möchte ich den durchschnittlichen Preis pro Fahrt einsehen können.\n",
-    "- Als Taxiunternehmen möchte ich die durchschnittliche Fahrtdauer einsehen können.\n",
-    "- Als Taxiunternehmen möchte ich die Verteilung der Bezahlungsmethoden visualisiert dargestellt einsehen können.\n",
-    "- Als Taxifahrer möchte ich das durchschnittliche Trinkgeld in Prozent einsehen können.\n",
-    "- Als Gemeinde möchte ich einen generellen Überblick über die insgesamte befahrung von Taxis bestimmter Stadtbereiche einsehen können.\n",
-    "\n"
+    "- Als Taxiunternehmen möchte ich die Anzahl der Taxifahrten pro Stunde einsehen können, um Stoßzeiten zu identifizieren und meine Fahrer besser einzuplanen.\n",
+    "- Als Taxiunternehmen möchte ich den durchschnittlichen Preis pro Fahrt einsehen können, um die Rentabilität der Fahrten zu bewerten und meine Tarife anzupassen.\n",
+    "- Als Taxiunternehmen möchte ich die durchschnittliche Fahrtdauer einsehen können, um die Effizienz der Fahrten zu analysieren und mögliche Optimierungen vorzunehmen.\n",
+    "- Als Taxiunternehmen möchte ich einen Bericht über die Anzahl transportierter Personen in den einzelnen Stadtgebieten erhalten, um die Fahrzeugbereitschaft besser planen zu können.\n",
+    "- Als Taxiunternehmen möchte ich die Verteilung der Bezahlungsmethoden visualisiert dargestellt einsehen können, um Trends bei Zahlungsmitteln zu erkennen und meine Zahlungsoptionen gezielt anzupassen.\n",
+    "- Als Taxiunternehmen möchte ich die häufigsten Start- und Zielorte von Fahrten einsehen können, um beliebte Routen zu erkennen und mein Angebot daran anzupassen.\n",
+    "- Als Taxiunternehmen möchte ich die Auslastung meiner Fahrzeuge pro Tag und Stunde einsehen können, um meine Flotte effizienter zu steuern.\n",
+    "- Als Taxiunternehmen möchte ich die Anzahl der Fahrten pro Fahrer auswerten können, um Leistung und Einsatzplanung besser zu überwachen.\n",
+    "- Als Taxiunternehmen möchte ich den Anteil leerer Rückfahrten (ohne Passagiere) einsehen können, um unnötige Kosten zu vermeiden.\n",
+    "\n",
+    "- Als Taxifahrer möchte ich das durchschnittliche Trinkgeld in Prozent einsehen können, um meinen persönlichen Service einschätzen und verbessern zu können.\n",
+    "\n",
+    "- Als Gemeinde möchte ich die Anzahl der Taxis pro Gebiet zu verschiedenen Tageszeiten einsehen können, um Verkehrsaufkommen und Umweltbelastung besser einschätzen zu können.\n",
+    "- Als Gemeinde möchte ich die durchschnittliche Wartezeit für Fahrgäste pro Stadtgebiet sehen können, um die Versorgung der Bevölkerung mit Taxis zu bewerten."
    ]
   },
   {
